--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "howler": "^2.2.4",
     "js-levenshtein": "^1.1.6",
     "next": "14.2.3",
     "react": "^18",
